cabal-version:       2.4

name:                HyloDP
version:             0.1.0.0
synopsis:            Dynamic Programming in Haskell using hylomorphisms with memoization.
-- description:
-- homepage:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Llorens <dllorens@uji.es>, Juan Miguel Vilar <jvilar@uji.es>
maintainer:          David Llorens <dllorens@uji.es>
copyright:           David Llorens and Juan Miguel Vilar, 2020
category:            Recursion, Dynamic Programming
extra-source-files:  README.md
stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/DavidLlorens/HyloDP.git

common shared-properties
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    MemoTrie >= 0.6.9 && < 0.7
  -- ghc-options: -Wall

library
    import: shared-properties
    exposed-modules:
        HyloDP.Base
        HyloDP.Semirings
        HyloDP
    hs-source-dirs: src

executable EditDistanceMain
    import: shared-properties
    main-is: EditDistanceMain.hs
    other-modules: EditDistance
    build-depends: HyloDP -any
    hs-source-dirs: examples

executable FibonacciMain
    import: shared-properties
    main-is: FibonacciMain.hs
    other-modules: Fibonacci
    build-depends: HyloDP -any
    hs-source-dirs: examples

executable TextSegmentationMain
    import: shared-properties
    main-is: TextSegmentationMain.hs
    other-modules: TextSegmentation
    build-depends:
        containers >= 0.6 && < 0.7,
        HyloDP -any
    hs-source-dirs: examples

executable KnapsackMain
    import: shared-properties
    main-is: KnapsackMain.hs
    other-modules: Knapsack
    build-depends: HyloDP -any
    hs-source-dirs: examples

executable RandomWalkMain
    import: shared-properties
    main-is: RandomWalkMain.hs
    other-modules: RandomWalk
    build-depends: HyloDP -any
    hs-source-dirs: examples

executable LongestCommonSubsequenceMain
    import: shared-properties
    main-is: LongestCommonSubsequenceMain.hs
    other-modules: LongestCommonSubsequence
    build-depends: HyloDP -any
    hs-source-dirs: examples

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  other-modules:
    Fibonacci,
    Knapsack,
    EditDistance,
    LongestCommonSubsequence,
    RandomWalk,
    TextSegmentation
  hs-source-dirs:
    test,
    examples
  main-is: Spec.hs
  build-depends:
    containers >= 0.6 && < 0.7,
    hspec >= 2.0 && < 3.0,
    HyloDP
